# e2k

./: .editorconfig  .gitignore  accent.py  benchmark.py  benchmark_inference.py  eval.py  export.py  extract.py  hp.py  ngram.py  pyproject.toml  train.py  training_history.md
src/e2k/: __init__.py  inference.py
src/e2k/models/: accent.npz
