[project]
name = "e2k"
version = "0.6.2"
description = "A tool for automatic English to Katakana conversion"
readme = "README.md"
authors = [{ name = "Patchethium", email = "asguftuikh@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.0,<3.0"]
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "black>=25.1.0",
  "build>=1.2.2.post1",
  "einops>=0.8.1",
  "g2p-en>=2.1.0",
  "safetensors>=0.5.2",
  "tensorboard>=2.18.0",
  "torch>=2.5.0,<2.9.0",
  "torcheval>=0.0.7",
  "tqdm>=4.67.1",
  "matplotlib>=3.10.3",
  "ipykernel>=6.29.5",
]

[project.optional-dependencies]
cpu = ["torch>=2.6.0,<2.9.0"]
cu121 = ["torch>=2.5.0,<2.9.0"]
cu124 = ["torch>=2.6.0,<2.9.0"]
cu126 = ["torch>=2.6.0,<2.9.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu121" }, { extra = "cu124" }, { extra = "cu126" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
e2k = ["models/*.npz", "models/ngram.json.zip"]
