[project]
name = "e2k"
version = "0.6.2"
description = "A tool for automatic English to Katakana conversion"
readme = "README.md"
authors = [{ name = "Patchethium", email = "asguftuikh@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.0,<3.0"]
license-files = ["LICENSE"]

[tool.taskipy.tasks]
lint = "ruff check --fix . ; pyright"
format = "ruff format ."
typecheck = "pyright"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "black>=25.1.0",
  "build>=1.2.2.post1",
  "einops>=0.8.1",
  "g2p-en>=2.1.0",
  "nltk<=3.8.1",  # avoid g2p-en related errors
  "safetensors>=0.5.2",
  "tensorboard>=2.18.0",
  "torch>=2.5.0,<2.9.0",
  "torcheval>=0.0.7",
  "tqdm>=4.67.1",
  "matplotlib>=3.10.3",
  "ipykernel>=6.29.5",
  "pyright>=1.1.407",
  "ruff>=0.14.6",
  "taskipy>=1.14.1",
]

[project.optional-dependencies]
cpu = ["torch>=2.6.0,<2.9.0"]
cu121 = ["torch>=2.5.0,<2.9.0"]
cu124 = ["torch>=2.6.0,<2.9.0"]
cu126 = ["torch>=2.6.0,<2.9.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu121" }, { extra = "cu124" }, { extra = "cu126" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
e2k = ["models/*.npz", "models/ngram.json.zip"]

[tool.ruff]
# 1行の長さを最大120文字に設定
line-length = 120
# インデントの幅を4スペースに設定
indent-width = 4
# Python 3.10 を利用する
target-version = "py310"
# runs/, vendor/ ディレクトリは対象から除外する
extend-exclude = ["runs/", "vendor/"]

[tool.ruff.lint]
# flake8, pycodestyle, pyupgrade, isort, Ruff 固有のルールを使う
select = ["F", "E", "W", "UP", "I", "RUF"]
ignore = [
    "E501",    # 1行の長さを超えている場合の警告を抑制
    "E731",    # Do not assign a `lambda` expression, use a `def` を抑制
    "RUF001",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF002",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF003",  # 全角記号など `ambiguous unicode character` も使いたいため
]

[tool.ruff.lint.isort]
# インポートブロックの後に2行空ける
lines-after-imports = 2

[tool.ruff.format]
# ダブルクオートを使う
quote-style = "double"
# インデントにはスペースを使う
indent-style = "space"

[tool.pyright]
# Python バージョンを指定
pythonVersion = "3.10"
# TypeCheckingMode を basic に設定
typeCheckingMode = "basic"
# プロジェクトルートを指定
pythonPlatform = "All"
# 除外するパス
exclude = [
    "**/__pycache__",
    "**/.venv",
    "runs/",
    "vendor/",
]
# VSCode の settings.json の diagnosticSeverityOverrides に対応する設定
reportConstantRedefinition = "none"
reportDeprecated = "warning"
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"
reportShadowedImports = "none"
reportUnnecessaryComparison = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUntypedFunctionDecorator = "none"
reportUnusedFunction = "none"
